--- a/GitLab_Architecture/gitlab-ci.yaml
+++ b/GitLab_Architecture/gitlab-ci.yaml
@@ -1,3 +1,4 @@
+image: node:17-alpine
 workflow:
   rules:
     - if: $CI_COMMIT_BRANCH!="main" &&  $CI_PIPELINE_SOURCE !="merge_request_event"
@@ -12,7 +13,7 @@ stages:
 run_unit_tests:
   stage: test
   before_script: # will run before the test data
-    - echo $CI_PIPELINE_SOURCE
+    - eco $CI_PIPELINE_SOURCE
     - echo "Preparing the test data"
     - chmod +x prepare-tests.sh
     - ./prepare-tests.sh
@@ -23,6 +24,8 @@ run_unit_tests:
 
 run_lint_tests:
   stage: test
+  needs:
+    - run_unit_tests
   script:
     - echo "building and tagging the docker image"
 
